--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
+      overflow-x: hidden;
     }
     header {
       width: 100%;
       padding: 20px;
-      background: rgba(0, 0, 0, 0.3);
+      background: rgba(0, 0, 0, 0.4);
       text-align: center;
-      font-size: 24px;
+      font-size: 26px;
       font-weight: bold;
     }
     .container {
@@ -65,6 +66,8 @@
       margin: 10px;
       flex: 1 1 250px;
       text-align: center;
+      position: relative;
+      overflow: hidden;
     }
     .department h3 {
       margin-bottom: 10px;
@@ -82,7 +85,7 @@
       font-size: 16px;
       cursor: pointer;
       margin-top: 10px;
-      transition: background-color 0.2s;
+      transition: background-color 0.2s, transform 0.3s;
     }
     .department button:hover {
       background-color: #0056b3;
@@ -107,7 +110,7 @@
       padding: 12px 25px;
       font-size: 18px;
       cursor: pointer;
-      transition: background-color 0.2s;
+      transition: background-color 0.2s, transform 0.3s;
     }
     .pitch-section button:hover {
       background-color: #e68900;
@@ -120,15 +123,93 @@
       border-radius: 8px;
       padding: 10px;
       font-size: 14px;
+      margin-bottom: 20px;
     }
     .log p {
       margin-bottom: 5px;
+    }
+    /* 미니 게임 패널 */
+    .minigame {
+      background: rgba(0, 0, 0, 0.4);
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .minigame h2 {
+      margin-bottom: 10px;
+      font-size: 22px;
+    }
+    .minigame button {
+      background-color: #28a745;
+      border: none;
+      border-radius: 4px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.2s, transform 0.3s;
+    }
+    .minigame button:hover {
+      background-color: #1e7e34;
+    }
+    /* 리더보드 패널 */
+    .leaderboard {
+      background: rgba(0, 0, 0, 0.4);
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .leaderboard h2 {
+      margin-bottom: 10px;
+      font-size: 22px;
+    }
+    .leaderboard ul {
+      list-style: none;
+      padding: 0;
+      font-size: 16px;
+    }
+    .leaderboard li {
+      margin: 5px 0;
+      padding: 5px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 4px;
+    }
+    .leaderboard button {
+      background-color: #dc3545;
+      border: none;
+      border-radius: 4px;
+      padding: 8px 15px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.2s, transform 0.3s;
+      margin-top: 10px;
+    }
+    .leaderboard button:hover {
+      background-color: #c82333;
+    }
+    /* 애니메이션 효과 */
+    @keyframes upgradePop {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.2); }
+      100% { transform: scale(1); }
+    }
+    .animate-pop {
+      animation: upgradePop 0.5s ease-out;
+    }
+    @keyframes buttonClick {
+      0% { transform: scale(1); }
+      50% { transform: scale(0.9); }
+      100% { transform: scale(1); }
+    }
+    .animate-click {
+      animation: buttonClick 0.2s ease-out;
     }
   </style>
 </head>
 <body>
   <header>디지털 기업가: 스타트업 성장 시뮬레이션</header>
-  <div class="container">
+  <div class="container" id="simulation">
     <!-- 통계 패널 -->
     <section class="stats">
       <div>자금: $<span id="funds">0</span></div>
@@ -142,28 +223,28 @@
         <p>레벨: <span id="rndLevel">1</span></p>
         <p>효과: 수익률 +<span id="rndBonus">1</span></p>
         <p>업그레이드 비용: $<span id="rndCost">50</span></p>
-        <button onclick="upgradeDepartment('rnd')">업그레이드</button>
+        <button onclick="upgradeDepartment('rnd', this)">업그레이드</button>
       </div>
       <div class="department" id="marketingDept">
         <h3>마케팅</h3>
         <p>레벨: <span id="marketingLevel">1</span></p>
         <p>효과: 평판 +<span id="marketingBonus">5</span></p>
         <p>업그레이드 비용: $<span id="marketingCost">100</span></p>
-        <button onclick="upgradeDepartment('marketing')">업그레이드</button>
+        <button onclick="upgradeDepartment('marketing', this)">업그레이드</button>
       </div>
       <div class="department" id="csDept">
         <h3>고객 서비스</h3>
         <p>레벨: <span id="csLevel">1</span></p>
         <p>효과: 투자 유치 보너스 +<span id="csBonus">10</span>%</p>
         <p>업그레이드 비용: $<span id="csCost">150</span></p>
-        <button onclick="upgradeDepartment('cs')">업그레이드</button>
+        <button onclick="upgradeDepartment('cs', this)">업그레이드</button>
       </div>
     </section>
     <!-- 투자 유치 섹션 -->
     <section class="pitch-section">
       <h2>투자 유치</h2>
       <p>최소 자금 요구: $<span id="pitchThreshold">500</span></p>
-      <button onclick="pitchInvestors()">투자 유치 실행</button>
+      <button onclick="pitchInvestors(this)">투자 유치 실행</button>
     </section>
     <!-- 로그 출력 -->
     <section class="log" id="log">
@@ -171,8 +252,29 @@
     </section>
   </div>
 
+  <!-- 미니 게임 섹션 -->
+  <div class="container" id="minigameSection">
+    <div class="minigame">
+      <h2>클릭 챌린지 (미니 게임)</h2>
+      <p id="miniTimer">남은 시간: 10초</p>
+      <p>클릭 횟수: <span id="miniClicks">0</span></p>
+      <button id="miniStartButton" onclick="startMiniGame(this)">미니 게임 시작</button>
+      <button id="miniClickButton" onclick="incrementMiniClick(this)" disabled>클릭!</button>
+    </div>
+  </div>
+
+  <!-- 리더보드 섹션 -->
+  <div class="container" id="leaderboardSection">
+    <div class="leaderboard">
+      <h2>리더보드</h2>
+      <ul id="leaderboardList"></ul>
+      <button onclick="saveScore(this)">현재 자금 점수 저장</button>
+      <button onclick="resetLeaderboard(this)">리더보드 초기화</button>
+    </div>
+  </div>
+
   <script>
-    // 기본 변수 설정
+    /******************** 시뮬레이션 기본 설정 ********************/
     let funds = 0;
     const baseRevenueRate = 1; // 기본 수익
     let reputation = 0; // 평판
@@ -216,7 +318,7 @@
     const csBonusElem = document.getElementById('csBonus');
     const csCostElem = document.getElementById('csCost');
 
-    // 로그 추가 함수
+    /******************** 로그 출력 함수 ********************/
     function addLog(message) {
       const p = document.createElement('p');
       p.textContent = `[로그] ${message}`;
@@ -224,9 +326,9 @@
       logElem.scrollTop = logElem.scrollHeight;
     }
 
-    // 통계 업데이트 함수: 1초마다 자금을 증가시키고 각 통계를 최신화
+    /******************** 통계 업데이트 함수 (방치형 효과) ********************/
     function updateStats() {
-      // R&D 효과를 기반으로 한 추가 수익
+      // R&D 효과 기반 추가 수익 계산
       const rndEffect = departments.rnd.bonus * departments.rnd.level;
       totalRevenueRate = baseRevenueRate + rndEffect;
       funds += totalRevenueRate;
@@ -234,15 +336,16 @@
       totalRevenueRateElem.textContent = totalRevenueRate;
       reputationElem.textContent = reputation;
     }
+    setInterval(updateStats, 1000);
 
-    // 부서 업그레이드 함수
-    function upgradeDepartment(dept) {
+    /******************** 부서 업그레이드 함수 ********************/
+    function upgradeDepartment(dept, btn) {
       const department = departments[dept];
       if (funds >= department.cost) {
         funds -= department.cost;
         department.level++;
         department.cost = Math.floor(department.cost * 1.5);
-        // 각 부서별로 UI와 효과 적용
+        // 부서 별 UI 및 효과 적용
         if (dept === 'rnd') {
           rndLevelElem.textContent = department.level;
           rndCostElem.textContent = department.cost;
@@ -250,7 +353,6 @@
         } else if (dept === 'marketing') {
           marketingLevelElem.textContent = department.level;
           marketingCostElem.textContent = department.cost;
-          // 평판 상승 효과
           reputation += department.bonus;
           addLog(`마케팅 업그레이드 완료! 평판 +${department.bonus}`);
         } else if (dept === 'cs') {
@@ -259,30 +361,124 @@
           addLog(`고객 서비스 업그레이드 완료! 레벨 ${department.level}`);
         }
         fundsElem.textContent = Math.floor(funds);
+        // 버튼 애니메이션 효과 추가
+        btn.classList.add('animate-pop');
+        setTimeout(() => btn.classList.remove('animate-pop'), 500);
       } else {
         alert("자금이 부족합니다!");
       }
     }
 
-    // 투자 유치 함수: 일정 자금 이상일 때 실행하여 추가 자금과 보너스 효과 적용
-    function pitchInvestors() {
+    /******************** 투자 유치 함수 ********************/
+    function pitchInvestors(btn) {
       if (funds >= pitchThreshold) {
         // 고객 서비스 효과를 반영한 추가 투자 보너스 (기본 50% + cs 효과)
         const csEffect = departments.cs.bonus * (departments.cs.level - 1);
         const bonusPercentage = 0.5 + (csEffect / 100);
         const bonusFunds = Math.floor(funds * bonusPercentage);
         funds += bonusFunds;
-        // 평판이 일정 수준일 때 기본 수익률 상승 (매 100 평판당 +1)
+        // 평판에 따른 수익률 보정 (매 100 평판당 +1)
         const repBonus = Math.floor(reputation / 100);
         addLog(`투자 유치 성공! $${bonusFunds} 추가 확보, 기본 수익률 보정: +${repBonus}`);
         fundsElem.textContent = Math.floor(funds);
+        btn.classList.add('animate-click');
+        setTimeout(() => btn.classList.remove('animate-click'), 200);
       } else {
         alert(`투자 유치를 위해 최소 $${pitchThreshold} 이상의 자금이 필요합니다.`);
       }
     }
 
-    // 1초마다 통계 업데이트 (방치형 효과)
-    setInterval(updateStats, 1000);
+    /******************** 미니 게임 기능 ********************/
+    let miniGameTime = 10;  // 10초 제한
+    let miniClicks = 0;
+    let miniGameInterval = null;
+    const miniTimerElem = document.getElementById('miniTimer');
+    const miniClicksElem = document.getElementById('miniClicks');
+    const miniClickButton = document.getElementById('miniClickButton');
+
+    function startMiniGame(btn) {
+      // 초기화
+      miniGameTime = 10;
+      miniClicks = 0;
+      miniTimerElem.textContent = `남은 시간: ${miniGameTime}초`;
+      miniClicksElem.textContent = miniClicks;
+      miniClickButton.disabled = false;
+      btn.disabled = true;
+      addLog("미니 게임 시작!");
+      
+      miniGameInterval = setInterval(() => {
+        miniGameTime--;
+        miniTimerElem.textContent = `남은 시간: ${miniGameTime}초`;
+        if(miniGameTime <= 0) {
+          endMiniGame();
+        }
+      }, 1000);
+    }
+
+    function incrementMiniClick(btn) {
+      miniClicks++;
+      miniClicksElem.textContent = miniClicks;
+      // 클릭할 때마다 버튼 애니메이션 효과
+      btn.classList.add('animate-click');
+      setTimeout(() => btn.classList.remove('animate-click'), 200);
+    }
+
+    function endMiniGame() {
+      clearInterval(miniGameInterval);
+      miniClickButton.disabled = true;
+      document.getElementById('miniStartButton').disabled = false;
+      // 추가 자금 보상: 클릭 수 * (1 + cs 레벨 보너스/100)
+      const csBonusMultiplier = 1 + (departments.cs.bonus * (departments.cs.level - 1)) / 100;
+      const bonus = Math.floor(miniClicks * 10 * csBonusMultiplier);
+      funds += bonus;
+      fundsElem.textContent = Math.floor(funds);
+      addLog(`미니 게임 종료! 클릭 ${miniClicks}회, 보상 $${bonus}`);
+      // 초기화 타이머 문구
+      miniTimerElem.textContent = "남은 시간: 10초";
+      miniClicksElem.textContent = "0";
+    }
+
+    /******************** 리더보드 기능 ********************/
+    function getLeaderboard() {
+      const scores = JSON.parse(localStorage.getItem('leaderboard')) || [];
+      // 내림차순 정렬
+      scores.sort((a, b) => b - a);
+      return scores.slice(0, 5); // 상위 5개만 반환
+    }
+
+    function displayLeaderboard() {
+      const leaderboardList = document.getElementById('leaderboardList');
+      leaderboardList.innerHTML = '';
+      const scores = getLeaderboard();
+      scores.forEach((score, index) => {
+        const li = document.createElement('li');
+        li.textContent = `${index + 1}. $${score}`;
+        leaderboardList.appendChild(li);
+      });
+    }
+
+    function saveScore(btn) {
+      const scores = JSON.parse(localStorage.getItem('leaderboard')) || [];
+      scores.push(Math.floor(funds));
+      localStorage.setItem('leaderboard', JSON.stringify(scores));
+      displayLeaderboard();
+      addLog("현재 자금 점수 저장 완료!");
+      btn.classList.add('animate-click');
+      setTimeout(() => btn.classList.remove('animate-click'), 200);
+    }
+
+    function resetLeaderboard(btn) {
+      if (confirm("리더보드를 초기화 하시겠습니까?")) {
+        localStorage.removeItem('leaderboard');
+        displayLeaderboard();
+        addLog("리더보드가 초기화되었습니다.");
+        btn.classList.add('animate-click');
+        setTimeout(() => btn.classList.remove('animate-click'), 200);
+      }
+    }
+
+    // 초기 리더보드 표시
+    displayLeaderboard();
   </script>
 </body>
 </html>
