--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -20,21 +19,21 @@
         <p>레벨: <span id="rndLevel">1</span></p>
         <p>효과: 마법 에너지 +<span id="rndBonus">1</span></p>
         <p>강화 비용: $<span id="rndCost">50</span></p>
-        <button onclick="upgradeDepartment('rnd', this)">마법 강화</button>
+        <button>마법 강화</button>
       </div>
       <div class="department" id="marketingDept">
         <h3>포션 마케팅</h3>
         <p>레벨: <span id="marketingLevel">1</span></p>
         <p>효과: 명성 +<span id="marketingBonus">5</span></p>
         <p>강화 비용: $<span id="marketingCost">100</span></p>
-        <button onclick="upgradeDepartment('marketing', this)">마케팅 강화</button>
+        <button>마케팅 강화</button>
       </div>
       <div class="department" id="csDept">
         <h3>용사 서비스</h3>
         <p>레벨: <span id="csLevel">1</span></p>
         <p>효과: 용의 보너스 +<span id="csBonus">10</span>%</p>
         <p>강화 비용: $<span id="csCost">150</span></p>
-        <button onclick="upgradeDepartment('cs', this)">서비스 강화</button>
+        <button>서비스 강화</button>
       </div>
     </section>
     <section class="pitch-section">
@@ -46,8 +45,8 @@
       <p>[로그] 이세계 스타트업이 시작되었습니다.</p>
     </section>
     <section class="save-load">
-      <button onclick="saveGame()">게임 저장</button>
-      <button onclick="loadGame()">게임 불러오기</button>
+      <button>게임 저장</button>
+      <button>게임 불러오기</button>
     </section>
   </div>
   <div class="container" id="minigameSection">
@@ -55,18 +54,18 @@
       <h2>마법 챌린지</h2>
       <p id="miniTimer">남은 시간: 10초</p>
       <p>마법 주문 횟수: <span id="miniClicks">0</span></p>
-      <button id="miniStartButton" onclick="startMiniGame(this)">챌린지 시작</button>
-      <button id="miniClickButton" onclick="incrementMiniClick(this)" disabled>주문 시전!</button>
+      <button id="miniStartButton">챌린지 시작</button>
+      <button id="miniClickButton" disabled>주문 시전!</button>
     </div>
   </div>
   <div class="container" id="leaderboardSection">
     <div class="leaderboard">
       <h2>이세계 리더보드</h2>
       <ul id="leaderboardList"></ul>
-      <button onclick="saveScore(this)">현재 황금 점수 저장</button>
-      <button onclick="resetLeaderboard(this)">리더보드 초기화</button>
+      <button>현재 황금 점수 저장</button>
+      <button>리더보드 초기화</button>
     </div>
   </div>
-  <script src="logic.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
